--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     </style>
 </head>
 <body>
+    <h1>Welcome!</h1>
+    <div id="count">0</div>
+    <button onclick="increment()">Click Me</button>
+    <button onclick="reset()">Reset</button>
     <script src="index.js"></script>
 </body>
 </html>
